# lyonkit-api

./: .dockerignore  .env  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  justfile  rust-toolchain.toml
.github/workflows/: cd.yml  ci.yml
clients/ts/: CHANGELOG.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/ts/src/: class.ts  index.ts
crates/entity/: Cargo.toml
crates/entity/src/: api_key.rs  blok.rs  file.rs  git_auth.rs  image.rs  lib.rs  locale.rs  locale_data.rs  namespace.rs  page.rs  post.rs  quote.rs
crates/health-check/: Cargo.toml
crates/health-check/src/: main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220517_000001_create_namespace_table.rs  m20220517_000002_create_page_table.rs  m20220517_000003_create_api_keys_table.rs  m20220517_000004_create_bloks_table.rs  m20220610_000005_create_images_table.rs  m20220610_000006_create_posts_table.rs  m20220716_000007_fix_blok_priority_trigger.rs  m20220831_000008_create_blok_table.rs  m20220901_000009_add_slug_column_to_posts.rs  m20220901_000010_create_git_auths_table.rs  m20220917_000011_fix_blok_priority_trigger.rs  m20220917_000012_fix_blok_priority_trigger.rs  m20221013_000013_create_locale_table.rs  m20221023_000014_add_timestamps_to_locales_data.rs  m20221103_000015_create_files_table.rs  main.rs
crates/migration/src/utils/: macros.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  main.rs  server.rs  telemetry.rs
crates/server/src/errors/: mod.rs  utils.rs
crates/server/src/middlewares/: api_key.rs  mod.rs  s3.rs
crates/server/src/services/: mod.rs
crates/server/src/services/blok/: mod.rs  models.rs  routes.rs
crates/server/src/services/blok/models/: blok_input.rs  blok_output.rs  blok_patch_input.rs  mod.rs
crates/server/src/services/files/: mod.rs  models.rs  repository.rs  routes.rs
crates/server/src/services/git_json_file/: mod.rs  models.rs  routes.rs  services.rs
crates/server/src/services/image/: mod.rs  models.rs  routes.rs
crates/server/src/services/locale/: mod.rs  models.rs  repository.rs  routes.rs
crates/server/src/services/page/: create.rs  mod.rs  models.rs  routes.rs
crates/server/src/services/post/: mod.rs  models.rs  routes.rs
crates/server/src/services/quote/: mod.rs  models.rs  routes.rs
crates/server/src/utils/: b64.rs  mod.rs  serde_json_patch.rs
crates/server/tests/api/: helpers.rs  main.rs  pick_unused_port.rs  test_app.rs  utils.rs
crates/server/tests/api/services/: mod.rs  page.rs  ping.rs
crates/server/tests/api/services/blok/: create.rs  delete.rs  mod.rs  patch.rs  read.rs  update.rs
crates/server/tests/api/services/file/: create.rs  delete.rs  read.rs  update.rs
crates/server/tests/api/services/file/snapshots/: api__services__file__create____test_context_wrapped_create_file_should_work-2.snap  api__services__file__create____test_context_wrapped_create_file_should_work.snap  api__services__file__create____test_context_wrapped_create_file_too_large_should_fail.snap  api__services__file__update____test_context_wrapped_update_file_metadata_should_work.snap  api__services__file__update____test_context_wrapped_update_file_should_work.snap
crates/server/tests/api/services/image/: create.rs  delete.rs  mod.rs  read.rs
crates/server/tests/api/services/locale/: mod.rs  read.rs  update.rs
crates/server/tests/api/services/page/: create.rs  delete.rs  read.rs  update.rs
crates/server/tests/api/services/post/: create.rs  delete.rs  mod.rs  read.rs  update.rs
crates/server/tests/api/services/quote/: create.rs  delete.rs  mod.rs  read.rs  update.rs
src/: main.rs
