[workspace]
members = [
    "crates/entity",
    "crates/migration",
    "crates/server",
    "crates/health-check"
]

[profile.release]
lto = "fat"

[profile.release.package.health-check]
strip = "symbols"

[package]
name = "lyonkit-api"
description = "Backend api for the lyonkit project"
version = "0.1.0"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
edition = "2021"