[package]
name = "entity"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version = "0.4.22", features = ["serde"] }
sea-orm = { version = "0.10.1" }
sea-query = { version = "0.27.1" }
getset = "0.1.2"
