[package]
name = "entity"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
chrono = { version = "0.4.37", features = ["serde"] }
sea-orm = { version = "0.12.15", features = ["postgres-array"] }
sea-query = { version = "0.30.7", features = ["postgres-array"] }
getset = "0.1.2"
