[package]
name = "health-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking"] }
openssl = { version = "0.10.40", features = ["vendored"] }
openssl-probe = "0.1.5"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"
