[package]
name = "migration"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm-migration = { version = "0.10.3", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = "0.4.23"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.22.0", features = ["macros"] }
openssl = { version = "0.10.42", features = ["vendored"] }
openssl-probe = "0.1.5"
