[package]
name = "migration"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
sea-orm-migration = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
chrono = "0.4.38"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.41.0", features = ["macros"] }
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-probe = "0.1.5"
