[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = "4.2.1"
actix-multipart = { version = "0.4.0" }
actix-cors = { version = "0.6.4" }
mime = { version = "0.3.16" }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
serde = "1.0.152"
tracing = "0.1.37"
tracing-actix-web = { version = "0.7.2", features = ["default", "opentelemetry_0_17"] }
opentelemetry = { version = "0.18", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.18.0" }
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
sea-orm = { version = "0.10.6", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "postgres-array"] }
config = { version = "0.13.3" }
serde_json = "1.0.91"
chrono = "0.4.23"
futures = "0.3.25"
getset = "0.1.2"
uuid = { version = "1.2.2", features = ["serde"] }
derive_more = "0.99.17"
url = "2.3.1"
async-trait = "0.1.60"
once_cell = "1.17.0"
aws-sdk-s3 = { version = "0.22.0", features = ["native-tls", "rt-tokio"], default-features = false }
aws-types = { version = "0.52.0" }
aws-config = { version = "0.52.0", features = ["native-tls", "rt-tokio"], default-features = false }
aws-smithy-http = { version = "0.52.0", features = ["rt-tokio"] }
aws-smithy-async = { version = "0.52.0", features = ["rt-tokio"] }
image = { version = "0.24.5" }
openssl = { version = "0.10.45", features = ["vendored"] }
openssl-probe = "0.1.5"
deunicode = { version = "1.3.3" }
lazy_static = { version = "1.4.0" }
base64 = "0.20.0"
reqwest = { version = "0.11.13", features = ["json", "cookies", "multipart", "stream"] }
typed-builder = "0.11.0"
humansize = { version = "2.1.3", features = ["impl_style"] }

[dev-dependencies]
insta = { version = "1.24.1", features = ["json"] }
portpicker = "0.1.1"
test-context = "0.1.4"
