[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Léo Coletta <leo.coletta@pm.me>"]
publish = false

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
actix-web = "4.9.0"
actix-multipart = { version = "0.7.2" }
actix-cors = { version = "0.7.0" }
mime = { version = "0.3.17" }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
serde = "1.0.213"
tracing = "0.1.40"
tracing-actix-web = { version = "0.7.14", features = ["default", "opentelemetry_0_17"] }
opentelemetry = { version = "0.26.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio-current-thread"] }
tracing-opentelemetry = { version = "0.27.0" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
sea-orm = { version = "0.12.15", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "postgres-array"] }
config = { version = "0.14.1" }
serde_json = "1.0.132"
chrono = "0.4.38"
futures = "0.3.31"
getset = "0.1.3"
uuid = { version = "1.11.0", features = ["serde"] }
derive_more = "0.99.18"
url = "2.5.2"
async-trait = "0.1.83"
once_cell = "1.20.2"
aws-sdk-s3 = { version = "0.39.1", features = ["native-tls", "rt-tokio"], default-features = false }
aws-types = { version = "0.101.0" }
aws-config = { version = "0.101.0", features = ["native-tls", "rt-tokio"], default-features = false }
aws-smithy-http = { version = "0.60.11", features = ["rt-tokio"] }
aws-smithy-async = { version = "0.101.0", features = ["rt-tokio"] }
image = { version = "0.25.4" }
openssl = { version = "0.10.68", features = ["vendored"] }
openssl-probe = "0.1.5"
deunicode = { version = "1.6.0" }
lazy_static = { version = "1.5.0" }
base64 = "0.22.1"
reqwest = { version = "0.12.8", features = ["json", "cookies", "multipart", "stream"] }
typed-builder = "0.20.0"
humansize = { version = "2.1.3", features = ["impl_style"] }
aws-credential-types = "0.101.0"

[dev-dependencies]
insta = { version = "1.40.0", features = ["json"] }
portpicker = "0.1.1"
test-context = "0.3.0"
